gcc/testsuite/rust/rustc/ui/parser/omitted-arg-in-item-fn.rs
fn foo(x) { // { dg-error "" "" { target *-*-* } }
}

fn main() {}

